# Minesweeper

./: CMakeLists.txt  jatek.c  jatek.h  main.c  menuvezerles.c  menuvezerles.h  ranglista.c  ranglista.h  typedefs.h
